<resources>
    <string name="app_name">SITAMPOL</string>
    <string name="action_settings">Pengaturan</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Daftar</string>
    <string name="back_to_login">Kembali ke Login</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="RT">RT</string>
    <string name="RW">RW</string>
    <string name="desa">Desa</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kota">Kota</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
